--- a/web/custom.css
+++ b/web/custom.css
@@ -93,3 +93,26 @@ input:checked + .slider:before {
     top: 350px;
   }
 }
+
+/* for md */
+
+.custom-switch.custom-switch-md .custom-control-label {
+  padding-left: 1rem;
+  padding-bottom: 0.75rem;
+}
+
+.custom-switch.custom-switch-md .custom-control-label::before {
+  height: 1.5rem;
+  width: calc(2rem + 0.75rem);
+  border-radius: 3rem;
+}
+
+.custom-switch.custom-switch-md .custom-control-label::after {
+  width: calc(1.5rem - 4px);
+  height: calc(1.5rem - 4px);
+  border-radius: calc(2rem - (1.5rem / 2));
+}
+
+.custom-switch.custom-switch-md .custom-control-input:checked ~ .custom-control-label::after {
+  transform: translateX(calc(1.5rem - 0.25rem));
+}
